example/secondfile/objects/OverragePrice__c.object
<CustomObject>
    <fields>
        <fullName>Master_Agent__c</fullName>
        <label>Master Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum_Elite__c</fullName>
        <label>Platinum Elite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platinum__c</fullName>
        <label>Platinum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RateEffectiveDate__c</fullName>
        <label>RateEffectiveDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RateExpiredDate__c</fullName>
        <label>Rate Expired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speeds__c</fullName>
        <label>Speeds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Overage Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Speeds__c</columns>
        <columns>Term__c</columns>
        <columns>Master_Agent__c</columns>
        <columns>Platinum_Elite__c</columns>
        <columns>Platinum__c</columns>
        <columns>ProductCode__c</columns>
        <columns>RateEffectiveDate__c</columns>
        <columns>RateExpiredDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RateExpiredDate__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OR-{00000000}</displayFormat>
        <label>OverragePrice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Overage Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>